--- a/index.html
+++ b/index.html
@@ -118,6 +118,39 @@
 
   </div>
 </section>
+<!-- ================= SECTOR IMPACT TAB ================= -->
+<section class="tabs-section">
+  <div class="container">
+
+    <div class="tabs">
+      <button class="tab-btn active" data-tab="sector-impact"
+        data-ar="الأثر القطاعي"
+        data-en="Sector Impact">
+      </button>
+
+      <button class="tab-btn" data-tab="charts"
+        data-ar="الرسوم البيانية"
+        data-en="Charts">
+      </button>
+    </div>
+
+    <!-- TAB CONTENT -->
+    <div class="tab-content active" id="sector-impact">
+      <h2 class="section-title"
+          data-ar="الأثر القطاعي"
+          data-en="Sector Impact">
+      </h2>
+
+      <div class="stats-grid impact-grid" id="sectorImpactGrid"></div>
+
+      <div class="chart-card doughnut-card">
+        <canvas id="sectorImpactChart"></canvas>
+      </div>
+    </div>
+
+  </div>
+</section>
+
 <!-- ================= SECTOR IMPACT ================= -->
   <section class="tab-content active" id="tab-overview">
 
