--- a/index.html
+++ b/index.html
@@ -76,13 +76,28 @@
     </div>
   </section>
 
-  <!-- SECTOR IMPACT -->
-  <section class="hero-stats sector-impact">
-    <div class="container">
-      <h2 class="section-title" data-ar="الأثر القطاعي" data-en="Sector Impact"></h2>
-      <div class="stats-grid" id="sectorImpactGrid"></div>
+  <!-- ================= SECTOR IMPACT ================= -->
+<section class="hero-stats sector-impact">
+  <div class="container">
+
+    <h2 class="section-title"
+        data-ar="الأثر القطاعي"
+        data-en="Sector Impact">
+    </h2>
+
+    <!-- Cards -->
+    <div class="stats-grid impact-grid" id="sectorImpactGrid">
+      <!-- Injected by JS -->
     </div>
-  </section>
+
+    <!-- Chart -->
+    <div class="chart-card sector-impact-chart">
+      <canvas id="sectorImpactChart"></canvas>
+    </div>
+
+  </div>
+</section>
+
 
   <!-- SECTOR IMPACT TABLE -->
   <section class="table-section">
