--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
   <section class="charts-section">
     <div class="container">
       <div class="chart-card">
-        <canvas id="sectorImpactChart"></canvas>
+        <canvas id="sectorImpactBarChart"></canvas>
       </div>
     </div>
   </section>
