--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <title>Annual Report 2025 – Yemen Red Crescent Society | Marib Branch</title>
 
   <!-- Styles -->
+  <link rel="stylesheet" href="tajawal.css">
   <link rel="stylesheet" href="styles.css">
-  <link href="https://fonts.googleapis.com/css2?family=Tajawal:wght@400;500;700;800&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 
   <!-- Charts -->
