--- a/index.html
+++ b/index.html
@@ -21,6 +21,18 @@ title: Annual Report 2025
 
 <body>
 
+<!-- Loading Overlay -->
+<div id="loading-overlay" class="loading-overlay">
+  <div class="spinner"></div>
+  <p data-ar="جاري التحميل..." data-en="Loading...">جاري التحميل...</p>
+</div>
+
+<!-- Error Message -->
+<div id="error-message" class="error-message" style="display: none;">
+  <p data-ar="البيانات غير متوفرة—يرجى إعادة التحديث." data-en="Data unavailable—please refresh."></p>
+  <button onclick="location.reload()" data-ar="إعادة التحميل" data-en="Reload">إعادة التحميل</button>
+</div>
+
 <!-- ================= HEADER ================= -->
 <header class="header">
   <div class="tabs-container">
