Add gallery lightbox modal, enhanced captions, and pagination for large galleries

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ title: Annual Report 2025
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Annual Report 2025 – Yemen Red Crescent Society | Marib Branch</title>
+  <title>Annual Report 2025 – Yemen Red Crescent Society  </title>
 
   <!-- Styles -->
   <link rel="stylesheet" href="tajawal.css">
@@ -235,9 +235,19 @@ title: Annual Report 2025
   <section class="gallery-section">
     <div class="container">
       <div class="gallery-grid"></div>
+      <div class="gallery-pagination" id="gallery-pagination"></div>
     </div>
   </section>
 </section>
+
+<!-- Lightbox Modal -->
+<div id="lightbox-modal" class="lightbox-modal">
+  <span class="lightbox-close" id="lightbox-close">&times;</span>
+  <img class="lightbox-image" id="lightbox-image" src="" alt="">
+  <div class="lightbox-caption" id="lightbox-caption"></div>
+  <a class="lightbox-prev" id="lightbox-prev">&#10094;</a>
+  <a class="lightbox-next" id="lightbox-next">&#10095;</a>
+</div>
 </section>
 
 <footer class="footer">
