Add table-wrapper for horizontal scrolling on small screens and improve error handling

--- a/index.html
+++ b/index.html
@@ -109,22 +109,24 @@ title: Annual Report 2025
   <!-- SECTOR IMPACT TABLE -->
   <section class="table-section">
     <div class="container">
-      <table class="projects-table sector-impact-table">
-        <thead>
-          <tr>
-            <th>#</th>
-            <th data-ar="القطاع" data-en="Sector"></th>
-            <th data-ar="عدد المستفيدين" data-en="Beneficiaries"></th>
-          </tr>
-        </thead>
-        <tbody id="sectorImpactBody"></tbody>
-        <tfoot>
-          <tr>
-            <th colspan="2" data-ar="الإجمالي" data-en="Total"></th>
-            <th id="sectorImpactTotal"></th>
-          </tr>
-        </tfoot>
-      </table>
+      <div class="table-wrapper">
+        <table class="projects-table sector-impact-table">
+          <thead>
+            <tr>
+              <th>#</th>
+              <th data-ar="القطاع" data-en="Sector"></th>
+              <th data-ar="عدد المستفيدين" data-en="Beneficiaries"></th>
+            </tr>
+          </thead>
+          <tbody id="sectorImpactBody"></tbody>
+          <tfoot>
+            <tr>
+              <th colspan="2" data-ar="الإجمالي" data-en="Total"></th>
+              <th id="sectorImpactTotal"></th>
+            </tr>
+          </tfoot>
+        </table>
+      </div>
     </div>
   </section>
 
@@ -166,20 +168,22 @@ title: Annual Report 2025
 <section class="tab-content" id="tab-projects">
   <section class="table-section">
     <div class="container">
-      <table class="projects-table">
-        <thead>
-          <tr>
-            <th>#</th>
-            <th data-ar="اسم المشروع" data-en="Project Name"></th>
-            <th data-ar="الفئة" data-en="Category"></th>
-            <th data-ar="الموقع" data-en="Location"></th>
-            <th data-ar="الفترة" data-en="Period"></th>
-            <th data-ar="الجهة الممولة" data-en="Donor"></th>
-            <th data-ar="المستفيدين" data-en="Beneficiaries"></th>
-          </tr>
-        </thead>
-        <tbody id="projectsTableBody"></tbody>
-      </table>
+      <div class="table-wrapper">
+        <table class="projects-table">
+          <thead>
+            <tr>
+              <th>#</th>
+              <th data-ar="اسم المشروع" data-en="Project Name"></th>
+              <th data-ar="الفئة" data-en="Category"></th>
+              <th data-ar="الموقع" data-en="Location"></th>
+              <th data-ar="الفترة" data-en="Period"></th>
+              <th data-ar="الجهة الممولة" data-en="Donor"></th>
+              <th data-ar="المستفيدين" data-en="Beneficiaries"></th>
+            </tr>
+          </thead>
+          <tbody id="projectsTableBody"></tbody>
+        </table>
+      </div>
     </div>
   </section>
 </section>
@@ -188,20 +192,22 @@ title: Annual Report 2025
 <section class="tab-content" id="tab-training">
   <section class="table-section">
     <div class="container">
-      <table class="projects-table">
-        <thead>
-          <tr>
-            <th>#</th>
-            <th data-ar="اسم الدورة" data-en="Training Title"></th>
-            <th data-ar="مكان التنفيذ" data-en="Location"></th>
-            <th data-ar="الفترة" data-en="Period"></th>
-            <th data-ar="الفئة المستهدفة" data-en="Target Group"></th>
-            <th data-ar="الجهة الممولة" data-en="Donor"></th>
-            <th data-ar="عدد المتدربين" data-en="Trainees"></th>
-          </tr>
-        </thead>
-        <tbody id="trainingTableBody"></tbody>
-      </table>
+      <div class="table-wrapper">
+        <table class="projects-table">
+          <thead>
+            <tr>
+              <th>#</th>
+              <th data-ar="اسم الدورة" data-en="Training Title"></th>
+              <th data-ar="مكان التنفيذ" data-en="Location"></th>
+              <th data-ar="الفترة" data-en="Period"></th>
+              <th data-ar="الفئة المستهدفة" data-en="Target Group"></th>
+              <th data-ar="الجهة الممولة" data-en="Donor"></th>
+              <th data-ar="عدد المتدربين" data-en="Trainees"></th>
+            </tr>
+          </thead>
+          <tbody id="trainingTableBody"></tbody>
+        </table>
+      </div>
     </div>
   </section>
 </section>
@@ -210,19 +216,21 @@ title: Annual Report 2025
 <section class="tab-content" id="tab-activities">
   <section class="table-section">
     <div class="container">
-      <table class="projects-table">
-        <thead>
-          <tr>
-            <th>#</th>
-            <th data-ar="الشهر" data-en="Month"></th>
-            <th data-ar="الموقع" data-en="Location"></th>
-            <th data-ar="ذكور" data-en="Male"></th>
-            <th data-ar="إناث" data-en="Female"></th>
-            <th data-ar="الإجمالي" data-en="Total"></th>
-          </tr>
-        </thead>
-        <tbody id="minesTableBody"></tbody>
-      </table>
+      <div class="table-wrapper">
+        <table class="projects-table">
+          <thead>
+            <tr>
+              <th>#</th>
+              <th data-ar="الشهر" data-en="Month"></th>
+              <th data-ar="الموقع" data-en="Location"></th>
+              <th data-ar="ذكور" data-en="Male"></th>
+              <th data-ar="إناث" data-en="Female"></th>
+              <th data-ar="الإجمالي" data-en="Total"></th>
+            </tr>
+          </thead>
+          <tbody id="minesTableBody"></tbody>
+        </table>
+      </div>
     </div>
   </section>
 </section>
