Fix HTML structure by properly closing the overview section

--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@ title: Annual Report 2025
       <div class="category-cards"></div>
     </div>
   </section>
-
+</section>
 
 <!-- ================= CHARTS ================= -->
 <section class="tab-content" id="tab-charts">
