--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
     <button class="tab-btn active" data-tab="tab-overview"
       data-ar="نظرة عامة" data-en="Overview"></button>
 
+    <button class="tab-btn" data-tab="tab-sector-impact"
+      data-ar="الأثر القطاعي" data-en="Sector Impact"></button>
+
     <button class="tab-btn" data-tab="tab-charts"
       data-ar="الرسوم البيانية" data-en="Charts"></button>
 
@@ -78,6 +81,19 @@
     </div>
   </section>
 
+  <!-- CATEGORY CARDS -->
+  <section class="category-section">
+    <div class="container">
+      <h2 class="section-title"
+        data-ar="مشاريع الاستجابة حسب الفئة"
+        data-en="Response Projects by Category"></h2>
+      <div class="category-cards"></div>
+    </div>
+  </section>
+</section>
+
+<!-- ================= SECTOR IMPACT ================= -->
+<section class="tab-content" id="tab-sector-impact">
   <!-- ================= SECTOR IMPACT ================= -->
 <section class="hero-stats sector-impact">
   <div class="container">
@@ -99,7 +115,6 @@
 
   </div>
 </section>
-
 
   <!-- SECTOR IMPACT TABLE -->
   <section class="table-section">
@@ -131,16 +146,6 @@
       <div class="chart-card">
         <canvas id="sectorImpactBarChart"></canvas>
       </div>
-    </div>
-  </section>
-
-  <!-- CATEGORY CARDS -->
-  <section class="category-section">
-    <div class="container">
-      <h2 class="section-title"
-        data-ar="مشاريع الاستجابة حسب الفئة"
-        data-en="Response Projects by Category"></h2>
-      <div class="category-cards"></div>
     </div>
   </section>
 </section>
