--- a/index.html
+++ b/index.html
@@ -94,6 +94,14 @@
 
 <!-- ================= SECTOR IMPACT ================= -->
 <section class="tab-content" id="tab-sector-impact">
+<div class="sub-tabs-container">
+  <button class="sub-tab-btn active" data-sub-tab="sub-overview" data-ar="نظرة عامة" data-en="Overview"></button>
+  <button class="sub-tab-btn" data-sub-tab="sub-health" data-ar="الصحة والرعاية" data-en="Health & Care"></button>
+  <button class="sub-tab-btn" data-sub-tab="sub-development" data-ar="دعم تطوير الجمعية" data-en="Organizational Development"></button>
+  <button class="sub-tab-btn" data-sub-tab="sub-disasters" data-ar="الكوارث والأزمات" data-en="Disasters & Crises"></button>
+  <button class="sub-tab-btn" data-sub-tab="sub-wash" data-ar="المياه والإسكان" data-en="Water & Shelter"></button>
+</div>
+<div class="sub-tab-content active" id="sub-overview">
   <!-- ================= SECTOR IMPACT ================= -->
 <section class="hero-stats sector-impact">
   <div class="container">
@@ -148,6 +156,43 @@
       </div>
     </div>
   </section>
+</div>
+<div class="sub-tab-content" id="sub-health">
+<section class="hero-stats sector-impact">
+<div class="container">
+<h2 class="section-title" data-ar="الصحة والرعاية" data-en="Health & Care"></h2>
+<div class="stats-grid impact-grid" id="sectorHealthGrid">
+</div>
+</div>
+</section>
+</div>
+<div class="sub-tab-content" id="sub-development">
+<section class="hero-stats sector-impact">
+<div class="container">
+<h2 class="section-title" data-ar="دعم تطوير الجمعية" data-en="Organizational Development"></h2>
+<div class="stats-grid impact-grid" id="sectorDevelopmentGrid">
+</div>
+</div>
+</section>
+</div>
+<div class="sub-tab-content" id="sub-disasters">
+<section class="hero-stats sector-impact">
+<div class="container">
+<h2 class="section-title" data-ar="الكوارث والأزمات" data-en="Disasters & Crises"></h2>
+<div class="stats-grid impact-grid" id="sectorDisastersGrid">
+</div>
+</div>
+</section>
+</div>
+<div class="sub-tab-content" id="sub-wash">
+<section class="hero-stats sector-impact">
+<div class="container">
+<h2 class="section-title" data-ar="المياه والإسكان" data-en="Water & Shelter"></h2>
+<div class="stats-grid impact-grid" id="sectorWashGrid">
+</div>
+</div>
+</section>
+</div>
 </section>
 
 <!-- ================= CHARTS ================= -->
