style of Sub-Tabs

--- a/index.html
+++ b/index.html
@@ -95,6 +95,7 @@
 <!-- ================= SECTOR IMPACT ================= -->
 <section class="tab-content" id="tab-sector-impact">
 <div class="sub-tabs-container">
+  <div class="sub-tab-indicator"></div>
   <button class="sub-tab-btn active" data-sub-tab="sub-overview" data-ar="نظرة عامة" data-en="Overview"></button>
   <button class="sub-tab-btn" data-sub-tab="sub-health" data-ar="الصحة والرعاية" data-en="Health & Care"></button>
   <button class="sub-tab-btn" data-sub-tab="sub-development" data-ar="دعم تطوير الجمعية" data-en="Organizational Development"></button>
