--- a/index.html
+++ b/index.html
@@ -184,6 +184,28 @@
 </div>
 </div>
 </section>
+
+<!-- Flood Response Section -->
+<section class="flood-response-section">
+<div class="container">
+<p class="flood-description"></p>
+<div class="table-wrapper">
+<table class="projects-table flood-table">
+<thead>
+<tr>
+<th data-ar="المحافظة" data-en="Governorate"></th>
+<th data-ar="سلة غذائية" data-en="Food Baskets"></th>
+<th data-ar="المستفيدين" data-en="Beneficiaries"></th>
+<th data-ar="مواد إيوائية" data-en="Shelter Materials"></th>
+<th data-ar="حقائب النظافة" data-en="Hygiene Kits"></th>
+<th data-ar="المستفيدين" data-en="Beneficiaries"></th>
+</tr>
+</thead>
+<tbody id="floodTableBody"></tbody>
+</table>
+</div>
+</div>
+</section>
 </div>
 <div class="sub-tab-content" id="sub-wash">
 <section class="hero-stats sector-impact">
