add AirStrike Section

--- a/index.html
+++ b/index.html
@@ -225,6 +225,28 @@
 <div class="legend-item"><span class="legend-color" style="background: rgba(231, 76, 60, 0.8);"></span><span data-ar="عالي" data-en="High"></span></div>
 </div>
 </div>
+
+<!-- Aerial Bombing Response Section -->
+<section class="aerial-bombing-section">
+<div class="container">
+<p class="aerial-description"></p>
+<div class="table-wrapper">
+<table class="projects-table aerial-table">
+<thead>
+<tr>
+<th data-ar="المحافظة" data-en="Governorate"></th>
+<th data-ar="مواد الإيواء" data-en="Shelter Materials"></th>
+<th data-ar="حقائب النظافة" data-en="Hygiene Kits"></th>
+<th data-ar="المستفيدين" data-en="Beneficiaries"></th>
+<th data-ar="السلال الغذائية" data-en="Food Baskets"></th>
+<th data-ar="المستفيدين" data-en="Beneficiaries"></th>
+</tr>
+</thead>
+<tbody id="aerialTableBody"></tbody>
+</table>
+</div>
+</div>
+</section>
 </div>
 </section>
 </div>
