--- a/index.html
+++ b/index.html
@@ -247,6 +247,43 @@
 </div>
 </div>
 </section>
+
+<!-- Lightning Response Section -->
+<section class="lightning-response-section">
+<div class="container">
+<p class="lightning-description"></p>
+
+<h3 data-ar="المساعدات المقدمة" data-en="Aid Provided"></h3>
+<div class="table-wrapper">
+<table class="projects-table lightning-aid-table">
+<thead>
+<tr>
+<th data-ar="المحافظة" data-en="Governorate"></th>
+<th data-ar="مواد الإيواء" data-en="Shelter Materials"></th>
+<th data-ar="المستفيدين" data-en="Beneficiaries"></th>
+<th data-ar="السلال الغذائية" data-en="Food Baskets"></th>
+<th data-ar="المستفيدين" data-en="Beneficiaries"></th>
+</tr>
+</thead>
+<tbody id="lightningAidTableBody"></tbody>
+</table>
+</div>
+
+<h3 data-ar="الإصابات والوفيات" data-en="Casualties and Deaths"></h3>
+<div class="table-wrapper">
+<table class="projects-table lightning-casualty-table">
+<thead>
+<tr>
+<th data-ar="المحافظة" data-en="Governorate"></th>
+<th data-ar="الوفيات" data-en="Deaths"></th>
+<th data-ar="الإصابات" data-en="Injuries"></th>
+</tr>
+</thead>
+<tbody id="lightningCasualtyTableBody"></tbody>
+</table>
+</div>
+</div>
+</section>
 </div>
 </section>
 </div>
