Fire Response Tab

--- a/index.html
+++ b/index.html
@@ -190,6 +190,7 @@
   <button class="disaster-sub-tab-btn active" data-disaster-tab="flood-response" data-ar="السيول" data-en="Floods"></button>
   <button class="disaster-sub-tab-btn" data-disaster-tab="aerial-bombing" data-ar="القصف الجوي" data-en="Aerial Bombing"></button>
   <button class="disaster-sub-tab-btn" data-disaster-tab="lightning" data-ar="الصواعق" data-en="Lightning"></button>
+  <button class="disaster-sub-tab-btn" data-disaster-tab="fire-response" data-ar="الحرائق" data-en="Fire Response"></button>
 </div>
 
 <!-- Flood Response Sub-Tab Content -->
@@ -294,6 +295,29 @@
 </tr>
 </thead>
 <tbody id="lightningCasualtyTableBody"></tbody>
+</table>
+</div>
+</div>
+</section>
+</div>
+
+<!-- Fire Response Sub-Tab Content -->
+<div class="disaster-tab-content" id="fire-response">
+<section class="fire-response-section">
+<div class="container">
+<h3 data-ar="الاستجابة للحرائق" data-en="Fire Response"></h3>
+<div class="table-wrapper">
+<table class="projects-table fire-response-table">
+<thead>
+<tr>
+<th data-ar="المحافظة" data-en="Governorate"></th>
+<th data-ar="سلة غذائية" data-en="Food Baskets"></th>
+<th data-ar="المستفيدين" data-en="Beneficiaries"></th>
+<th data-ar="مواد إيواء" data-en="Shelter Materials"></th>
+<th data-ar="المستفيدين" data-en="Beneficiaries"></th>
+</tr>
+</thead>
+<tbody id="fireResponseTableBody"></tbody>
 </table>
 </div>
 </div>
