--- a/index.html
+++ b/index.html
@@ -96,11 +96,26 @@
 <section class="tab-content" id="tab-sector-impact">
 <div class="sub-tabs-container">
   <div class="sub-tab-indicator"></div>
-  <button class="sub-tab-btn active" data-sub-tab="sub-overview" data-ar="نظرة عامة" data-en="Overview"></button>
-  <button class="sub-tab-btn" data-sub-tab="sub-health" data-ar="الصحة والرعاية" data-en="Health & Care"></button>
-  <button class="sub-tab-btn" data-sub-tab="sub-development" data-ar="دعم تطوير الجمعية" data-en="Organizational Development"></button>
-  <button class="sub-tab-btn" data-sub-tab="sub-disasters" data-ar="الكوارث والأزمات" data-en="Disasters & Crises"></button>
-  <button class="sub-tab-btn" data-sub-tab="sub-wash" data-ar="المياه والإسكان" data-en="Water & Shelter"></button>
+  <button class="sub-tab-btn active" data-sub-tab="sub-overview" data-ar="نظرة عامة" data-en="Overview">
+    <img src="Icons/IFRC-icons-colour_Map.png" alt="Overview" class="sub-tab-icon">
+    <span data-ar="نظرة عامة" data-en="Overview"></span>
+  </button>
+  <button class="sub-tab-btn" data-sub-tab="sub-health" data-ar="الصحة والرعاية" data-en="Health & Care">
+    <img src="Icons/IFRC-icons-colour_Emergency-health-stethoscope.png" alt="Health & Care" class="sub-tab-icon">
+    <span data-ar="الصحة والرعاية" data-en="Health & Care"></span>
+  </button>
+  <button class="sub-tab-btn" data-sub-tab="sub-development" data-ar="دعم تطوير الجمعية" data-en="Organizational Development">
+    <img src="Icons/IFRC-icons-colour_Community-engagement.png" alt="Organizational Development" class="sub-tab-icon">
+    <span data-ar="دعم تطوير الجمعية" data-en="Organizational Development"></span>
+  </button>
+  <button class="sub-tab-btn" data-sub-tab="sub-disasters" data-ar="الكوارث والأزمات" data-en="Disasters & Crises">
+    <img src="Icons/IFRC-icons-colour_Extreme-weather.png" alt="Disasters & Crises" class="sub-tab-icon">
+    <span data-ar="الكوارث والأزمات" data-en="Disasters & Crises"></span>
+  </button>
+  <button class="sub-tab-btn" data-sub-tab="sub-wash" data-ar="المياه والإسكان" data-en="Water & Shelter">
+    <img src="Icons/IFRC-icons-colour_Water-and-sanitation-WASH.png" alt="Water & Shelter" class="sub-tab-icon">
+    <span data-ar="المياه والإسكان" data-en="Water & Shelter"></span>
+  </button>
 </div>
 <div class="sub-tab-content active" id="sub-overview">
   <!-- ================= SECTOR IMPACT ================= -->
@@ -187,11 +202,26 @@
 
 <!-- Disaster Response Sub-Tabs -->
 <div class="disaster-sub-tabs">
-  <button class="disaster-sub-tab-btn active" data-disaster-tab="flood-response" data-ar="السيول" data-en="Floods"></button>
-  <button class="disaster-sub-tab-btn" data-disaster-tab="aerial-bombing" data-ar="القصف الجوي" data-en="Aerial Bombing"></button>
-  <button class="disaster-sub-tab-btn" data-disaster-tab="lightning" data-ar="الصواعق" data-en="Lightning"></button>
-  <button class="disaster-sub-tab-btn" data-disaster-tab="fire-response" data-ar="الحرائق" data-en="Fire Response"></button>
-  <button class="disaster-sub-tab-btn" data-disaster-tab="rockslides" data-ar="الانهيارات الصخرية" data-en="Rockslides"></button>
+  <button class="disaster-sub-tab-btn active" data-disaster-tab="flood-response" data-ar="السيول" data-en="Floods">
+    <img src="Icons/IFRC-icons-colour_Floods.png" alt="Floods" class="disaster-tab-icon">
+    <span data-ar="السيول" data-en="Floods"></span>
+  </button>
+  <button class="disaster-sub-tab-btn" data-disaster-tab="aerial-bombing" data-ar="القصف الجوي" data-en="Aerial Bombing">
+    <img src="Icons/IFRC-icons-colour_Conflict.png" alt="Aerial Bombing" class="disaster-tab-icon">
+    <span data-ar="القصف الجوي" data-en="Aerial Bombing"></span>
+  </button>
+  <button class="disaster-sub-tab-btn" data-disaster-tab="lightning" data-ar="الصواعق" data-en="Lightning">
+    <img src="Icons/IFRC-icons-colour_Storm.png" alt="Lightning" class="disaster-tab-icon">
+    <span data-ar="الصواعق" data-en="Lightning"></span>
+  </button>
+  <button class="disaster-sub-tab-btn" data-disaster-tab="fire-response" data-ar="الحرائق" data-en="Fire Response">
+    <img src="Icons/IFRC-icons-colour_Wildfire.png" alt="Fire Response" class="disaster-tab-icon">
+    <span data-ar="الحرائق" data-en="Fire Response"></span>
+  </button>
+  <button class="disaster-sub-tab-btn" data-disaster-tab="rockslides" data-ar="الانهيارات الصخرية" data-en="Rockslides">
+    <img src="Icons/IFRC-icons-colour_Landslide-Mudslide.png" alt="Rockslides" class="disaster-tab-icon">
+    <span data-ar="الانهيارات الصخرية" data-en="Rockslides"></span>
+  </button>
 </div>
 
 <!-- Flood Response Sub-Tab Content -->
