--- a/index.html
+++ b/index.html
@@ -222,6 +222,10 @@
     <img src="Icons/IFRC-icons-colour_Landslide-Mudslide.png" alt="Rockslides" class="disaster-tab-icon">
     <span data-ar="الانهيارات الصخرية" data-en="Rockslides"></span>
   </button>
+  <button class="disaster-sub-tab-btn" data-disaster-tab="aid-distribution" data-ar="توزيع المساعدات" data-en="Aid Distribution">
+    <img src="Icons/IFRC-icons-colour_Food.png" alt="Aid Distribution" class="disaster-tab-icon">
+    <span data-ar="توزيع المساعدات" data-en="Aid Distribution"></span>
+  </button>
 </div>
 
 <!-- Flood Response Sub-Tab Content -->
@@ -372,6 +376,29 @@
 </tr>
 </thead>
 <tbody id="rockslidesTableBody"></tbody>
+</table>
+</div>
+</div>
+</section>
+</div>
+
+<!-- Aid Distribution Sub-Tab Content -->
+<div class="disaster-tab-content" id="aid-distribution">
+<section class="aid-distribution-section">
+<div class="container">
+<h3 data-ar="توزيع السلال الغذائية والمواد غير الغذائية" data-en="Distribution of Food Baskets and Non-Food Items"></h3>
+<div class="table-wrapper">
+<table class="projects-table aid-distribution-table">
+<thead>
+<tr>
+<th data-ar="المحافظة" data-en="Governorate"></th>
+<th data-ar="سلة غذائية" data-en="Food Baskets"></th>
+<th data-ar="المستفيدين" data-en="Beneficiaries"></th>
+<th data-ar="حصة إيوائية" data-en="Shelter Kits"></th>
+<th data-ar="المستفيدين" data-en="Beneficiaries"></th>
+</tr>
+</thead>
+<tbody id="aidDistributionTableBody"></tbody>
 </table>
 </div>
 </div>
