most poor update

--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
     <img src="Icons/IFRC-icons-colour_Landslide-Mudslide.png" alt="Rockslides" class="disaster-tab-icon">
     <span data-ar="الانهيارات الصخرية" data-en="Rockslides"></span>
   </button>
-  <button class="disaster-sub-tab-btn" data-disaster-tab="aid-distribution" data-ar="توزيع المساعدات" data-en="Aid Distribution">
+  <button class="disaster-sub-tab-btn" data-disaster-tab="aid-distribution" data-ar="الأشد فقرا" data-en="Most Poor">
     <img src="Icons/IFRC-icons-colour_Food.png" alt="Aid Distribution" class="disaster-tab-icon">
     <span data-ar="توزيع المساعدات" data-en="Aid Distribution"></span>
   </button>
